fixed badge img z-index issue

--- a/src/containers/wishlist/styles.scss
+++ b/src/containers/wishlist/styles.scss
@@ -586,7 +586,7 @@ icon-cross {
     width: 40%;
     top: 0;
     position: absolute;
-    z-index: 4;
+    z-index: 3;
   img {
     width: 40px;
     max-width: 40px;
